# nczero

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  compile  compile.sh  compile_commands.json  test.sh
.cache/clangd/index/: attacks.cpp.66D7CF07931D4298.idx  attacks.h.2CE81CD79A4BB7D0.idx  bitboard.cpp.3A167C1AFDC9351A.idx  bitboard.h.BE4A2FA0E0851B30.idx  board.cpp.91EE884C9060B3B6.idx  board.h.B88956E735D4EAF7.idx  color.cpp.78E8611347FF64CA.idx  color.h.CFC3B9D7B761F2B7.idx  context.h.C96755111EB449B3.idx  cppflow.h.32E54EEE32F8659D.idx  datatype.h.BC5F46E0903888B1.idx  defer.h.D9DD09C2A77F43BF.idx  input.h.B0DDD6F4D7DE6FB2.idx  log.h.0540C3741DE58905.idx  magic_consts.h.7EF17C1D9F462CC6.idx  model.h.3B51CAA1B2C471D5.idx  move.cpp.844BD60C510FC13A.idx  move.h.72105E721533D4F6.idx  net.cpp.EF9631A71A64C5D9.idx  net.h.21EA6B29F3C59FCD.idx  ops.h.455EFD368255DB5C.idx  perft.cpp.DB06043A0B0C8E2D.idx  perft.h.AC24A543FED73F70.idx  piece.cpp.E0C25D8A42BE1672.idx  piece.h.D8A60D0F670CDB54.idx  platform.h.B2CCFBEB689BD093.idx  position.cpp.9DE92FB3AF6BF422.idx  position.h.7A15159A1E0B85AE.idx  raw_ops.h.89B077F9AAB42D21.idx  search.cpp.3D769AFDC34DBB74.idx  search.h.07C4414CFA525D61.idx  square.cpp.003EA3CD84E8DC67.idx  square.h.0024ED587BFDB529.idx  tensor.h.AFA30F2C10268F89.idx  type.cpp.74C30194EA566080.idx  type.h.4EE189A09B6FB20A.idx  util.cpp.E082843E5FF1540A.idx  util.h.4D190E3E134013B1.idx  zobrist.cpp.1C107845EB96968A.idx  zobrist.h.99BD9631D0CBF6A7.idx
include/nczero/: log.h  net.h  node.h  pool.h  tests.h  timer.h  worker.h
include/nczero/chess/: attacks.h  bitboard.h  board.h  color.h  magic_consts.h  move.h  perft.h  piece.h  position.h  square.h  type.h  zobrist.h
models/: init.py
scripts/: generate.py
src/: CMakeLists.txt
src/libnczero/: CMakeLists.txt  attacks.cpp  bitboard.cpp  board.cpp  color.cpp  log.cpp  move.cpp  net.cpp  node.cpp  perft.cpp  piece.cpp  pool.cpp  position.cpp  search.cpp  square.cpp  timer.cpp  type.cpp  util.cpp  worker.cpp  zobrist.cpp
src/libnczero/chess/: attacks.cpp  bitboard.cpp  board.cpp  color.cpp  move.cpp  perft.cpp  piece.cpp  position.cpp  square.cpp  type.cpp  zobrist.cpp
src/nczero/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  tests.cpp
